--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -13,251 +13,215 @@ jobs:
       actions: read
       contents: read
     outputs:
-      all-passed: ${{ steps.check-all.outputs.all-passed }}
+      all-passed: ${{ steps.decision.outputs.all-passed }}
+      semgrep-findings: ${{ steps.semgrep.outputs.total_findings }}
+      npm-vulnerabilities: ${{ steps.npm-audit.outputs.vulnerability_count }}
+      bandit-findings: ${{ steps.bandit.outputs.total_findings }}
+    
     steps:
       - uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-
-      - name: Setup debug environment
-        run: |
-          echo "=== System Information ==="
-          echo "OS: $(uname -a)"
-          echo "Python: $(python3 --version 2>/dev/null || echo 'not found')"
-          echo "Node: $(node --version 2>/dev/null || echo 'not found')"
-          echo "=== Repository Info ==="
-          echo "Working dir: $(pwd)"
-          find . -type f -name "*.py" -o -name "*.js" -o -name "*.ts" -o -name "*.java" | head -10 | xargs -I {} echo "Found: {}"
 
       - name: Semgrep scan
         id: semgrep
-        continue-on-error: true
+        continue-on-error: true  # Важно! Не падать при нахождении уязвимостей
         run: |
-          echo "=== Running Semgrep Scan ==="
+          pip install semgrep --quiet
           
-          # Устанавливаем Semgrep если не установлен
-          if ! command -v semgrep &> /dev/null; then
-            echo "Installing Semgrep..."
-            python3 -m pip install semgrep || true
-          fi
-          
-          # Запускаем Semgrep с подробным выводом
+          # Запускаем semgrep и сохраняем результаты
           semgrep scan \
             --config=auto \
-            --verbose \
             --json \
             --output=semgrep-results.json \
-            --error \
-            --no-rewrite-rule-ids \
-            --disable-nosem \
+            --metrics=off \
             --disable-version-check \
             . || true
           
-          # Проверяем результаты
+          # Анализируем результаты
           if [ -f "semgrep-results.json" ]; then
-            echo "=== Semgrep Results ==="
-            FINDINGS_COUNT=$(jq '.results | length' semgrep-results.json 2>/dev/null || echo "0")
-            echo "Total findings: $FINDINGS_COUNT"
+            TOTAL=$(jq '.results | length' semgrep-results.json 2>/dev/null || echo "0")
+            ERROR=$(jq '[.results[] | select(.extra.severity == "ERROR")] | length' semgrep-results.json 2>/dev/null || echo "0")
+            WARNING=$(jq '[.results[] | select(.extra.severity == "WARNING")] | length' semgrep-results.json 2>/dev/null || echo "0")
             
-            if [ "$FINDINGS_COUNT" -gt 0 ]; then
-              echo "⚠️ Semgrep found $FINDINGS_COUNT security issues:"
-              
-              # Выводим краткую информацию о найденных проблемах
-              jq -r '.results[] | "  - [\(.extra.severity)] \(.check_id): \(.path):\(.start.line)"' semgrep-results.json | head -20
-              
-              # Выводим полные детали для первых 3 findings
+            echo "total_findings=$TOTAL" >> $GITHUB_OUTPUT
+            echo "error_findings=$ERROR" >> $GITHUB_OUTPUT
+            echo "warning_findings=$WARNING" >> $GITHUB_OUTPUT
+            
+            # Выводим сводку
+            echo "=== Semgrep Results Summary ==="
+            echo "Total findings: $TOTAL"
+            echo "ERROR severity: $ERROR"
+            echo "WARNING severity: $WARNING"
+            
+            if [ "$TOTAL" -gt 0 ]; then
               echo ""
-              echo "=== Detailed findings (first 3) ==="
-              jq '.results[0:3]' semgrep-results.json
-              
-              # Сохраняем флаг что есть проблемы
-              echo "semgrep_has_issues=true" >> $GITHUB_OUTPUT
-              echo "semgrep_findings_count=$FINDINGS_COUNT" >> $GITHUB_OUTPUT
-            else
-              echo "✅ Semgrep found no security issues"
-              echo "semgrep_has_issues=false" >> $GITHUB_OUTPUT
-              echo "semgrep_findings_count=0" >> $GITHUB_OUTPUT
+              echo "=== Top findings ==="
+              jq -r '.results[0:10][] | "\(.extra.severity) - \(.check_id): \(.path):\(.start.line)"' semgrep-results.json
             fi
           else
-            echo "❌ Semgrep results file not generated"
-            echo "semgrep_has_issues=false" >> $GITHUB_OUTPUT
-            echo "semgrep_findings_count=0" >> $GITHUB_OUTPUT
+            echo "total_findings=0" >> $GITHUB_OUTPUT
+            echo "error_findings=0" >> $GITHUB_OUTPUT
+            echo "warning_findings=0" >> $GITHUB_OUTPUT
           fi
 
       - name: npm audit (miniapp)
-        id: npm-audit-miniapp
+        id: npm-audit
         working-directory: ./frontend-miniapp
         continue-on-error: true
         run: |
-          echo "=== Running npm audit ==="
-          
           if [ ! -f "package.json" ]; then
-            echo "❌ package.json not found in $(pwd)"
-            echo "npm_has_issues=true" >> $GITHUB_OUTPUT
-            echo "npm_vulnerabilities_count=0" >> $GITHUB_OUTPUT
+            echo "vulnerability_count=0" >> $GITHUB_OUTPUT
+            echo "high_vulnerabilities=0" >> $GITHUB_OUTPUT
+            echo "✅ No package.json found"
             exit 0
           fi
           
-          # Запускаем npm audit
           npm audit --audit-level=high --omit=dev --json > npm-audit-results.json 2>&1 || true
           
           if [ -f "npm-audit-results.json" ]; then
-            # Проверяем наличие уязвимостей
-            VULN_COUNT=$(jq '[.metadata.vulnerabilities[]] | add' npm-audit-results.json 2>/dev/null || echo "0")
-            HIGH_VULN=$(jq '.metadata.vulnerabilities.high' npm-audit-results.json 2>/dev/null || echo "0")
-            CRITICAL_VULN=$(jq '.metadata.vulnerabilities.critical' npm-audit-results.json 2>/dev/null || echo "0")
+            TOTAL=$(jq '[.metadata.vulnerabilities[]] | add' npm-audit-results.json 2>/dev/null || echo "0")
+            HIGH=$(jq '.metadata.vulnerabilities.high' npm-audit-results.json 2>/dev/null || echo "0")
+            CRITICAL=$(jq '.metadata.vulnerabilities.critical' npm-audit-results.json 2>/dev/null || echo "0")
             
-            echo "Total vulnerabilities: $VULN_COUNT"
-            echo "High: $HIGH_VULN, Critical: $CRITICAL_VULN"
+            echo "vulnerability_count=$TOTAL" >> $GITHUB_OUTPUT
+            echo "high_vulnerabilities=$HIGH" >> $GITHUB_OUTPUT
+            echo "critical_vulnerabilities=$CRITICAL" >> $GITHUB_OUTPUT
             
-            if [ "$HIGH_VULN" -gt 0 ] || [ "$CRITICAL_VULN" -gt 0 ]; then
-              echo "❌ npm audit found high/critical vulnerabilities:"
-              jq '.metadata.vulnerabilities' npm-audit-results.json
-              
-              echo "=== Affected packages ==="
-              jq -r '.vulnerabilities[] | "  - \(.name)@\(.range): \(.severity) - \(.title)"' npm-audit-results.json 2>/dev/null | head -10 || true
-              
-              echo "npm_has_issues=true" >> $GITHUB_OUTPUT
-              echo "npm_vulnerabilities_count=$VULN_COUNT" >> $GITHUB_OUTPUT
-            else
-              echo "✅ npm audit passed"
-              echo "npm_has_issues=false" >> $GITHUB_OUTPUT
-              echo "npm_vulnerabilities_count=0" >> $GITHUB_OUTPUT
-            fi
+            echo "=== npm audit Results ==="
+            echo "Total vulnerabilities: $TOTAL"
+            echo "High: $HIGH, Critical: $CRITICAL"
           else
-            echo "✅ npm audit completed (no vulnerabilities found or audit passed)"
-            echo "npm_has_issues=false" >> $GITHUB_OUTPUT
-            echo "npm_vulnerabilities_count=0" >> $GITHUB_OUTPUT
+            echo "vulnerability_count=0" >> $GITHUB_OUTPUT
+            echo "high_vulnerabilities=0" >> $GITHUB_OUTPUT
+            echo "critical_vulnerabilities=0" >> $GITHUB_OUTPUT
           fi
 
       - name: Bandit scan
         id: bandit
         continue-on-error: true
         run: |
-          echo "=== Running Bandit Scan ==="
+          pip install bandit --quiet
           
-          # Устанавливаем bandit если не установлен
-          if ! command -v bandit &> /dev/null; then
-            echo "Installing bandit..."
-            python3 -m pip install bandit || true
-          fi
-          
-          # Ищем Python файлы
-          PY_FILES=$(find . -type f -name "*.py" ! -path "./.*" ! -path "*/node_modules/*" ! -path "*/venv/*" | head -50)
-          
-          if [ -z "$PY_FILES" ]; then
-            echo "ℹ️ No Python files found to scan"
-            echo "bandit_has_issues=false" >> $GITHUB_OUTPUT
-            echo "bandit_findings_count=0" >> $GITHUB_OUTPUT
-            exit 0
-          fi
-          
-          echo "Found Python files to scan:"
-          echo "$PY_FILES" | xargs -I {} echo "  - {}"
-          
-          # Запускаем bandit
-          echo "$PY_FILES" | xargs bandit \
-            -f json \
-            -o bandit-results.json \
-            -ll \
-            -r . \
-            --exit-zero \
-            --skip "B101,B404,B603,B108" 2>&1 || true
+          # Ищем Python файлы для сканирования
+          find . -type f -name "*.py" ! -path "./.*" ! -path "*/node_modules/*" ! -path "*/venv/*" | \
+            xargs bandit -f json -o bandit-results.json -ll --exit-zero 2>/dev/null || true
           
           if [ -f "bandit-results.json" ]; then
-            FINDINGS_COUNT=$(jq '.results | length' bandit-results.json 2>/dev/null || echo "0")
-            echo "Bandit findings: $FINDINGS_COUNT"
+            TOTAL=$(jq '.results | length' bandit-results.json 2>/dev/null || echo "0")
+            HIGH=$(jq '[.results[] | select(.issue_severity == "HIGH")] | length' bandit-results.json 2>/dev/null || echo "0")
+            MEDIUM=$(jq '[.results[] | select(.issue_severity == "MEDIUM")] | length' bandit-results.json 2>/dev/null || echo "0")
             
-            if [ "$FINDINGS_COUNT" -gt 0 ]; then
-              echo "⚠️ Bandit found $FINDINGS_COUNT security issues:"
-              
-              # Выводим краткую информацию
-              jq -r '.results[] | "  - [\(.issue_severity)] \(.test_name): \(.filename):\(.line_number) - \(.issue_text)"' bandit-results.json | head -10
-              
-              echo "bandit_has_issues=true" >> $GITHUB_OUTPUT
-              echo "bandit_findings_count=$FINDINGS_COUNT" >> $GITHUB_OUTPUT
-            else
-              echo "✅ Bandit found no security issues"
-              echo "bandit_has_issues=false" >> $GITHUB_OUTPUT
-              echo "bandit_findings_count=0" >> $GITHUB_OUTPUT
-            fi
+            echo "total_findings=$TOTAL" >> $GITHUB_OUTPUT
+            echo "high_findings=$HIGH" >> $GITHUB_OUTPUT
+            echo "medium_findings=$MEDIUM" >> $GITHUB_OUTPUT
+            
+            echo "=== Bandit Results ==="
+            echo "Total findings: $TOTAL"
+            echo "High: $HIGH, Medium: $MEDIUM"
           else
-            echo "✅ Bandit scan completed"
-            echo "bandit_has_issues=false" >> $GITHUB_OUTPUT
-            echo "bandit_findings_count=0" >> $GITHUB_OUTPUT
+            echo "total_findings=0" >> $GITHUB_OUTPUT
+            echo "high_findings=0" >> $GITHUB_OUTPUT
+            echo "medium_findings=0" >> $GITHUB_OUTPUT
           fi
 
-      - name: Summary and decision
-        id: check-all
+      - name: Generate security report
+        id: report
+        if: always()
         run: |
-          echo "=== Security Scan Summary ==="
-          echo ""
+          echo "# 📊 Security Scan Report" > security-report.md
+          echo "" >> security-report.md
           
-          # Получаем результаты
-          SEMGREP_ISSUES=${{ steps.semgrep.outputs.semgrep_has_issues || 'false' }}
-          SEMGREP_COUNT=${{ steps.semgrep.outputs.semgrep_findings_count || '0' }}
+          # Semgrep
+          SEMGREP_TOTAL=${{ steps.semgrep.outputs.total_findings || '0' }}
+          SEMGREP_ERROR=${{ steps.semgrep.outputs.error_findings || '0' }}
           
-          NPM_ISSUES=${{ steps.npm-audit-miniapp.outputs.npm_has_issues || 'false' }}
-          NPM_COUNT=${{ steps.npm-audit-miniapp.outputs.npm_vulnerabilities_count || '0' }}
+          echo "## 🔍 Semgrep" >> security-report.md
+          echo "- **Total findings:** $SEMGREP_TOTAL" >> security-report.md
+          echo "- **Critical (ERROR):** $SEMGREP_ERROR" >> security-report.md
+          echo "" >> security-report.md
           
-          BANDIT_ISSUES=${{ steps.bandit.outputs.bandit_has_issues || 'false' }}
-          BANDIT_COUNT=${{ steps.bandit.outputs.bandit_findings_count || '0' }}
+          # npm audit
+          NPM_TOTAL=${{ steps.npm-audit.outputs.vulnerability_count || '0' }}
+          NPM_CRITICAL=${{ steps.npm-audit.outputs.critical_vulnerabilities || '0' }}
           
-          echo "📊 Results Summary:"
-          echo "  Semgrep:   $SEMGREP_COUNT findings ($([ "$SEMGREP_ISSUES" = "true" ] && echo "❌ FAILED" || echo "✅ PASSED"))"
-          echo "  npm audit: $NPM_COUNT vulnerabilities ($([ "$NPM_ISSUES" = "true" ] && echo "❌ FAILED" || echo "✅ PASSED"))"
-          echo "  Bandit:    $BANDIT_COUNT findings ($([ "$BANDIT_ISSUES" = "true" ] && echo "❌ FAILED" || echo "✅ PASSED"))"
-          echo ""
+          echo "## 📦 npm audit (frontend-miniapp)" >> security-report.md
+          echo "- **Total vulnerabilities:** $NPM_TOTAL" >> security-report.md
+          echo "- **Critical:** $NPM_CRITICAL" >> security-report.md
+          echo "" >> security-report.md
           
-          # Определяем общий статус на основе политики
-          # Можно настроить политику: какие проверки должны быть строгими
-          FAILED=false
-          FAILED_TOOLS=""
+          # Bandit
+          BANDIT_TOTAL=${{ steps.bandit.outputs.total_findings || '0' }}
+          BANDIT_HIGH=${{ steps.bandit.outputs.high_findings || '0' }}
           
-          # Политика: Semgrep - warning только
-          if [ "$SEMGREP_ISSUES" = "true" ]; then
-            echo "⚠️  Semgrep found issues (set as warning)"
-            # Semgrep можно сделать warning, не блокирующим
-            # FAILED=true
-            # FAILED_TOOLS="$FAILED_TOOLS Semgrep"
-          fi
+          echo "## 🐍 Bandit (Python)" >> security-report.md
+          echo "- **Total findings:** $BANDIT_TOTAL" >> security-report.md
+          echo "- **High severity:** $BANDIT_HIGH" >> security-report.md
+          echo "" >> security-report.md
           
-          # Политика: npm audit - блокируем на high/critical
-          if [ "$NPM_ISSUES" = "true" ]; then
-            echo "❌ npm audit found HIGH/CRITICAL vulnerabilities"
-            FAILED=true
-            FAILED_TOOLS="$FAILED_TOOLS npm-audit"
-          fi
-          
-          # Политика: Bandit - блокируем на high
-          if [ "$BANDIT_ISSUES" = "true" ]; then
-            echo "❌ Bandit found security issues"
-            FAILED=true
-            FAILED_TOOLS="$FAILED_TOOLS Bandit"
-          fi
-          
-          if [ "$FAILED" = "true" ]; then
-            echo "::error::Security scan failed: $FAILED_TOOLS"
-            echo "all-passed=false" >> $GITHUB_OUTPUT
-            echo ""
-            echo "🔧 Next steps:"
-            echo "1. Review the findings above"
-            echo "2. Check the generated JSON files for details"
-            echo "3. Fix critical issues before merging"
-            echo "4. For false positives, add exceptions to the scan configuration"
-            exit 1
-          else
-            echo "✅ All security checks passed!"
-            echo "all-passed=true" >> $GITHUB_OUTPUT
-          fi
+          echo "## 📈 Summary" >> security-report.md
+          echo "Scan completed successfully. Review findings above." >> security-report.md
 
-      - name: Upload scan results as artifacts
+      - name: Upload security report
         if: always()
         uses: actions/upload-artifact@v4
         with:
-          name: security-scan-results
-          path: |
-            semgrep-results.json
-            bandit-results.json
-            frontend-miniapp/npm-audit-results.json
-          retention-days: 30
+          name: security-report
+          path: security-report.md
+
+      - name: Decision gate
+        id: decision
+        run: |
+          echo "=== Security Decision Gate ==="
+          
+          # Получаем данные
+          SEMGREP_ERROR=${{ steps.semgrep.outputs.error_findings || '0' }}
+          NPM_CRITICAL=${{ steps.npm-audit.outputs.critical_vulnerabilities || '0' }}
+          NPM_HIGH=${{ steps.npm-audit.outputs.high_vulnerabilities || '0' }}
+          BANDIT_HIGH=${{ steps.bandit.outputs.high_findings || '0' }}
+          
+          # Политика безопасности (можно настраивать)
+          FAIL=false
+          REASONS=""
+          
+          # Правило 1: Критические уязвимости npm блокируют
+          if [ "$NPM_CRITICAL" -gt 0 ]; then
+            FAIL=true
+            REASONS="$REASONS Found $NPM_CRITICAL CRITICAL npm vulnerabilities; "
+          fi
+          
+          # Правило 2: High уязвимости npm блокируют
+          if [ "$NPM_HIGH" -gt 2 ]; then  # Допускаем до 2 high
+            FAIL=true
+            REASONS="$REASONS Found $NPM_HIGH HIGH npm vulnerabilities (limit: 2); "
+          fi
+          
+          # Правило 3: High Bandit findings блокируют
+          if [ "$BANDIT_HIGH" -gt 0 ]; then
+            FAIL=true
+            REASONS="$REASONS Found $BANDIT_HIGH HIGH Bandit issues; "
+          fi
+          
+          # Правило 4: Semgrep ERROR можно настроить как warning
+          if [ "$SEMGREP_ERROR" -gt 0 ]; then
+            echo "⚠️  Found $SEMGREP_ERROR Semgrep ERROR findings (review recommended)"
+            # Можно не блокировать, только предупреждать
+            # FAIL=true
+            # REASONS="$REASONS Found $SEMGREP_ERROR Semgrep ERROR findings; "
+          fi
+          
+          if [ "$FAIL" = true ]; then
+            echo "all-passed=false" >> $GITHUB_OUTPUT
+            echo "::error::Security gate blocked: $REASONS"
+            echo "❌ Security checks failed: $REASONS"
+            exit 1
+          else
+            echo "all-passed=true" >> $GITHUB_OUTPUT
+            echo "✅ All security checks passed"
+          fi
+
+      - name: Create GitHub annotations (optional)
+        if: failure() && github.event_name == 'pull_request'
+        run: |
+          # Создаем аннотации для найденных проблем
+          if [ -f "semgrep-results.json" ]; then
+            jq -r '.results[] | select(.extra.severity == "ERROR") | "::error file=\(.path),line=\(.start.line),col=\(.start.col)::[Semgrep] \(.extra.message)"' semgrep-results.json || true
+          fi
